[FIX] Fix information element wrapping to new line

--- a/stock_report_element_sizes/static/src/scss/style.scss
+++ b/stock_report_element_sizes/static/src/scss/style.scss
@@ -7,13 +7,13 @@
     margin-bottom: 35px;
 }
 
-#stock_picking_informations > div.col-auto.mw-100.mb-2 {
+#stock_picking_informations > div {
     display: inline-block !important;
     max-width: 24% !important;
     min-width: 200px !important;
 }
 
-#stock_deliveryslip_informations > div.col-auto {
+#stock_deliveryslip_informations > div {
     display: inline-block !important;
     max-width: 24% !important;
     min-width: 200px !important;
